[package]
name = "move-binding-derive"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "^2.0.46"
quote = "^1.0.35"
proc-macro2 = "^1.0.74"
itertools = "0.14.0"
reqwest = { version = "^0.12", features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "^1.0.138"
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev="86a9e06"}
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev="86a9e06"}
move-types = { path = "../move-types" }
fastcrypto = "0.1.9"
bcs = "0.1.6"
move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client", rev="86a9e06"}

