[package]
name = "move-binding-derive"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "^2.0.46"
quote = "^1.0.35"
proc-macro2 = "^1.0.74"
serde = { workspace = true, features = ["derive"] }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev="f0c8068"}
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev="f0c8068"}
move-binding = { path = "../move-binding" }
move-types = { path = "../move-types" }
bcs = "0.1.6"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sui-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client", rev="f0c8068"}