[package]
name = "move-binding"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
syn = "^2.0.46"
quote = "^1.0.35"
proc-macro2 = "^1.0.74"
itertools = "0.14.0"
reqwest = { version = "^0.12", features = ["blocking", "json"] }
serde_json = "^1.0.138"
anyhow = "1.0.98"
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "71bb8c2" }
fastcrypto = "0.1.9"
bcs = "0.1.6"
move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
prettyplease = "0.2.32"
once_cell = "1.20.3"

[dev-dependencies]
insta = "1.43.1"
prettyplease = "0.2.32"