[package]
name = "move-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace = true
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"] }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk" }
primitive-types = { version = "^0.10" , features = ["serde"]}